--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 
     <!-- favicon -->
     <link
-      rel="apple-touch-icon"
+      rel="icon"
       sizes="180x180"
       href="images/x-icon/ant-512x512.png"
     />
