--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,9 +8,9 @@
 
     <!-- favicon -->
     <link
-      rel="icon"
+      rel="ant-touch-icon"
       sizes="180x180"
-      href="images/x-icon/ant-512x512.png"
+      href="images/x-icon/ant-touch-icon.png"
     />
     <link
       rel="icon"
