--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CodeCats</title>
+    <title>AntAttack</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +9,7 @@
     <!-- favicon -->
     <link
       rel="ant-touch-icon"
-      sizes="128x128"
+      sizes="180x180"
       href="images/x-icon/ant-touch-icon.png"
     />
     <link
