--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,7 @@
       <div class="container">
         <div class="logo">
           <a href="/">
-            <img src="images/x-icon/ant-touch-icon.png" alt="logo" />
+            <img src="images/x-icon/ant-touch-icon.png" size="64x64" alt="logo" />
           </a>
         </div>
         <div class="menu">
