--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,9 +8,9 @@
 
     <!-- favicon -->
     <link
-      rel="image"
-      sizes="180x180"
-      href="images/x-icon/ant-32x32.png"
+      rel="ant-touch-icon"
+      sizes="64x64"
+      href="images/x-icon/ant-touch-icon.png"
     />
     <link
       rel="icon"
