--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,13 +13,13 @@
       href="images/x-icon/ant-touch-icon.png"
     />
     <link
-      rel="x-icon"
+      rel="icon"
       type="image/png"
       sizes="32x32"
       href="images/x-icon/favicon-32x32.png"
     />
     <link
-      rel="x-icon"
+      rel="icon"
       type="image/png"
       sizes="16x16"
       href="images/x-icon/favicon-16x16.png"
