--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,6 +70,8 @@
       <div>
         <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
         <h1 id="welcomeH1">Welcome to the AntAttack NFT Project!</h1>
+        <p id="welcomeP">
+          The AntAttack NFT Project is a decentralized, open-source project that aims to demonstrate how to develope and launch your own NFT Collection</p>
       </div>
     </section>
 
